--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,11 @@
 {
   "extends": "airbnb-base",
+  "plugins": [
+    "jest"
+  ],
+  "env": {
+    "jest": true
+  },
   "rules": {
     "no-empty": ["error", { "allowEmptyCatch": true }],
     "prefer-rest-params": "off",
