--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.15.4",
     "express-ejs-layouts": "^2.3.1",
     "lodash": "^4.17.4",
+    "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v1.0.0",
     "morgan": "^1.9.0",
+    "speakeasy": "^2.0.0",
     "winston": "^2.4.0",
     "winston-redis": "^1.0.0"
   },
@@ -34,6 +36,7 @@
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^21.3.2",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
     "node-mocks-http": "^1.6.6"
