--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-ejs-layouts": "^2.3.1",
+    "ioredis": "^3.2.1",
     "lodash": "^4.17.4",
     "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v1.0.0",
     "morgan": "^1.9.0",
