--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/DFE-Digital/login.dfe.devices#readme",
   "dependencies": {
+    "body": "^5.1.0",
     "body-parser": "^1.18.1",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
@@ -30,8 +31,10 @@
     "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v1.0.0",
     "morgan": "^1.9.0",
     "speakeasy": "^2.0.0",
+    "thirty-two": "^1.0.2",
     "winston": "^2.4.0",
-    "winston-redis": "^1.0.0"
+    "winston-redis": "^1.0.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "eslint": "^4.4.1",
