--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/DFE-Digital/login.dfe.devices#readme",
   "dependencies": {
+    "adal-node": "^0.1.25",
+    "azure-keyvault": "^2.0.1-preview",
     "body": "^5.1.0",
     "body-parser": "^1.18.1",
     "ejs": "^2.5.7",
