--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/DFE-Digital/login.dfe.devices#readme",
   "dependencies": {
     "adal-node": "^0.1.25",
+    "applicationinsights": "^1.0.1",
     "azure-keyvault": "^2.0.1-preview",
     "body": "^5.1.0",
     "body-parser": "^1.18.1",
