--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ioredis": "^3.2.1",
     "lodash": "^4.17.4",
     "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v1.0.0",
+    "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v1.2",
     "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.3",
     "morgan": "^1.9.0",
     "speakeasy": "^2.0.0",
