--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v1.0.0",
     "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v1.2",
     "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.4",
+    "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v1.1",
     "morgan": "^1.9.0",
     "speakeasy": "^2.0.0",
     "thirty-two": "^1.0.2",
     "winston": "^2.4.0",
-    "winston-azure-application-insights": "^1.1.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
