--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.4.5",
     "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v1.1",
     "simpl-schema": "^1.5.3",
+    "sequelize": "^4.38.0",
     "speakeasy": "^2.0.0",
     "thirty-two": "^1.0.2",
     "winston": "^2.4.0",
