--- a/package.json
+++ b/package.json
@@ -29,28 +29,29 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-ejs-layouts": "^2.3.1",
-    "ioredis": "^3.2.1",
+    "ioredis": "^3.2.2",
     "lodash": "^4.17.11",
-    "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v1.0.0",
-    "login.dfe.config.schema.common": "git+https://github.com/DFE-Digital/login.dfe.config.schema.common.git#v1.2",
+    "login.dfe.api.auth": "github:DFE-Digital/login.dfe.api.auth#v2.0.0",
+    "login.dfe.config.schema.common": "git+https://github.com/DFE-Digital/login.dfe.config.schema.common.git#v1.4",
     "login.dfe.express-error-handling": "git+https://github.com/DFE-Digital/login.dfe.express-error-handling.git#v1.2",
-    "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.4.5",
-    "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v1.1",
-    "sequelize": "^4.38.0",
-    "simpl-schema": "^1.5.3",
+    "login.dfe.healthcheck": "git+https://github.com/DFE-Digital/login.dfe.healthcheck.git#v1.6",
+    "login.dfe.winston-appinsights": "git+https://github.com/DFE-Digital/login.dfe.winston-appinsights.git#v3.0",
+    "sequelize": "^4.44.3",
+    "tedious": "^2.6.4",
+    "simpl-schema": "^1.5.6",
     "speakeasy": "^2.0.0",
     "thirty-two": "^1.0.2",
     "uuid": "^3.3.2",
-    "winston": "^2.4.0",
+    "winston": "^2.4.3",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jest": "^21.3.2",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^21.27.2",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "node-mocks-http": "^1.6.6"
   },
   "jest": {
