--- a/.vsts-ssp-standalone.yml
+++ b/.vsts-ssp-standalone.yml
@@ -29,5 +29,5 @@ stages:
 - template: /Application/node/stages/signin-master-standalone-stage.yml@devopsTemplates
   parameters:
     applicationName: devices
-    resourceGroupSuffix: dev-failover
-    armTemplateName: template-failover.json
+    resourceGroupSuffix: dev
+    armTemplateName: template.json
